--- a/src/kotlin/fr/paris/lutece/plugins/hellokt/resources/hellokt_messages.properties
+++ b/src/kotlin/fr/paris/lutece/plugins/hellokt/resources/hellokt_messages.properties
@@ -5,5 +5,5 @@ plugin.description=Hello World plugin written in Kotlin
 
 # XPages keys
 
-xpage.hello.pageTitle=hello
-xpage.hello.pagePathLabel=hello
+xpage.hello.pageTitle=Hello Kotlin
+xpage.hello.pagePathLabel=Hello Kotlin
