--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,19 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>4.0.4</version>
+        <version>5.1.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.paris.lutece.plugins</groupId>
-    <artifactId>plugin-hellokt</artifactId>
-    <packaging>lutece-plugin</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>lutece-kotlin-global-pom</artifactId>
+    <version>5.1.0-SNAPSHOT</version>
 
-    <name>Lutece hellokt plugin</name>
+    <name>Lutece kotlin global pom</name>
     
     <properties>
-        <kotlin.version>1.2.21</kotlin.version>
-        <jiraProjectName>HELLOKT</jiraProjectName>
+        <kotlin.version>1.4.10</kotlin.version>
+        <jiraProjectName>KOTLINPOM</jiraProjectName>
         <jiraComponentId></jiraComponentId>
     </properties>
 
@@ -41,12 +40,6 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>fr.paris.lutece</groupId>
-            <artifactId>lutece-core</artifactId>
-            <version>[6.0.1,)</version>
-            <type>lutece-core</type>
-        </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
@@ -132,9 +125,9 @@
     </build>
 
     <scm>
-        <connection>scm:git:https://github.com/lutece-platform/lutece-dev-plugin-hellokt.git</connection>
-        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-dev-plugin-hellokt.git</developerConnection>
-        <url>https://github.com/lutece-platform/lutece-dev-plugin-hellokt.git</url>
+        <connection>scm:git:https://github.com/lutece-platform/tools-maven-kotlin-global-pom.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/tools-maven-kotlin-global-pom.git</developerConnection>
+        <url>scm:git:https://github.com/lutece-platform/tools-maven-kotlin-global-pom.git</url>
     </scm>
     
 </project>
